--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,11 +21,13 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
+    implementation 'com.android.support:design:28.0.0' //Design Library
     implementation 'com.android.support:recyclerview-v7:28.0.0' //RecyclerView Library
     implementation 'com.android.support:cardview-v7:28.0.0' //CardView Library
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0' //Retrofit Library for http/sql requests
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0' //Retrofit Converter Library
 
     testImplementation 'junit:junit:4.12'
 
